--- a/scripts/openai_inference_config.json
+++ b/scripts/openai_inference_config.json
@@ -1,7 +1,7 @@
 {
     "requests_directory": "data/datasets/nli_prompted",  
     "save_directory": "data/datasets/completions/",
-    "request_url": "https://shcopenaisandbox.openai.azure.com/openai/deployments/shc-gpt-4o/chat/completions?api-version=2023-03-15-preview",
+    "request_url": "../chat/completions?api-version=2023-03-15-preview",
     "generation_config": "src/factehr/clients/generation_params.json",
     "models": [
         "shc-gpt-4o"
